--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: '';
+  src: url('./../public/NunitoSans-VariableFont_YTLC,opsz,wdth,wght.ttf');
+}
+
+.light_box_shadow {
+  box-shadow: 0 0px 8px -1px rgb(0 0 0 / 0.2), 0 0px 6px -2px rgb(0 0 0 / 0.2);
+}
